--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@ body {
 
 body {
   color: rgb(0 0 0 / 50%);
-  font-family: "Orbitron", sans-serif;
+  font-family: 'Orbitron', sans-serif;
   background-image: linear-gradient(
     to bottom,
     rgb(114, 114, 186),
@@ -45,7 +45,7 @@ header {
   font-size: 2.8em;
   background: none;
   border: none;
-  font-family: "Orbitron", sans-serif;
+  font-family: 'Orbitron', sans-serif;
   color: rgb(0 0 0 / 50%);
   text-align: center;
   max-width: 100%;
